src/objects/Loan_Traunch__c.object
<CustomObject>
    <fields>
        <fullName>Accounts_w_Avidia_on_Auto_Deduction__c</fullName>
        <label>Accounts w/ Avidia on Auto Deduction</label>
        <summaryFilterItems>
            <field>Loan__c.Avidia_Account_Holder__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Loan__c.Auto_Deduction_Payments__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Accounts_with_Avidia_Bank__c</fullName>
        <label>Accounts with Avidia Bank</label>
        <summaryFilterItems>
            <field>Loan__c.Avidia_Account_Holder__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_Capital__c</fullName>
        <formula>IF(Capital_Pushback__c &gt; 0 , null, Tranche_Cap__c -  capital_reserved_for_advancement__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avdia_Draw_Fee__c</fullName>
        <formula>Avidia_Requested_Amount__c * 0.01</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avdia Draw Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avidia_Requested_Amount__c</fullName>
        <formula>total_draw_request__c * 0.95</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avidia Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avidia_disbursement__c</fullName>
        <formula>Avidia_Requested_Amount__c -  Avdia_Draw_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avidia Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BlueWave_Capital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BlueWave Capital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BlueWave_Equity__c</fullName>
        <formula>total_draw_request__c * 0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BlueWave Equity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Outflows__c</fullName>
        <label>Capital Reserved</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Pushback__c</fullName>
        <formula>IF(  TEXT(Stage__c) = &quot;Closed&quot;, (Tranche_Cap__c -  capital_reserved_for_advancement__c)*0.95, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capital Pushback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital_Reserved__c</fullName>
        <label>Capital Committed</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_disbursement__c</fullName>
        <label>Date of Disbursement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Interest_only_Period__c</fullName>
        <formula>IF(  today() &gt; Interest_only_End_Date__c,Interest_only_End_Date__c -  Date_of_disbursement__c ,today()-  Date_of_disbursement__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Interest only Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocuSign_Advance_Line_of_Credit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DocuSign Advance Line of Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSign_RL_Check__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DocuSign RL Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Capital__c</fullName>
        <label>Initial Capital</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_only_End_Date__c</fullName>
        <label>Interest only End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_only_period__c</fullName>
        <label>Interest only period</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_Data__c</fullName>
        <label>Capital Pool</label>
        <referenceTo>Loan_Data__c</referenceTo>
        <relationshipLabel>Loan Tranches</relationshipLabel>
        <relationshipName>Loan_Tranches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MonthLD__c</fullName>
        <formula>TEXT(Loan_Data__r.Month__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Late_Loans__c</fullName>
        <label>Number of Late Payments</label>
        <summaryFilterItems>
            <field>Loan__c.Late_Category__c</field>
            <operation>contains</operation>
            <value>days</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Loans__c</fullName>
        <label>Number of Loans</label>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>On_Time__c</fullName>
        <label>On Time</label>
        <summaryFilterItems>
            <field>Loan__c.Late_Category__c</field>
            <operation>equals</operation>
            <value>On Time</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Late_Payees__c</fullName>
        <formula>Number_of_Late_Loans__c /  Number_of_Loans__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage of Late Payees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Principal_Reserved__c</fullName>
        <label>Principal Reserved</label>
        <summarizedField>Loan__c.Principall__c</summarizedField>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Push_back_Transacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push-back Transacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pushback_Amount__c</fullName>
        <formula>Available_Capital__c - BlueWave_Equity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pushback Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Capital Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital not requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tranche_Cap__c</fullName>
        <label>Net Cash to BlueWave</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tranche_Type__c</fullName>
        <label>Tranche Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSLP - Holding Tranche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueWave - Holding Tranche</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Dummy_2__c</fullName>
        <label>Update Dummy 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Dummy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Dummy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X0_30_days_late__c</fullName>
        <label>0-30 days late</label>
        <summaryFilterItems>
            <field>Loan__c.Late_Category__c</field>
            <operation>equals</operation>
            <value>0-30 days</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X30_60_days_late__c</fullName>
        <label>30-60 days late</label>
        <summaryFilterItems>
            <field>Loan__c.Late_Category__c</field>
            <operation>equals</operation>
            <value>30-60 days</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X60_90_days_late__c</fullName>
        <label>60-90 days late</label>
        <summaryFilterItems>
            <field>Loan__c.Late_Category__c</field>
            <operation>equals</operation>
            <value>60-90 days</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>YearLD__c</fullName>
        <formula>TEXT(Loan_Data__r.Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>capital_reserved_for_advancement__c</fullName>
        <label>Capital Reserved for Advancement</label>
        <summarizedField>Loan__c.System_Costt__c</summarizedField>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>over_120_days_late__c</fullName>
        <label>over 120 days late</label>
        <summaryFilterItems>
            <field>Loan__c.Late_Category__c</field>
            <operation>equals</operation>
            <value>over 120 days</value>
        </summaryFilterItems>
        <summaryForeignKey>Loan__c.Loan_Tranche__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>total_draw_request__c</fullName>
        <formula>Tranche_Cap__c / 0.99</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Grossed up to account for draw fee</inlineHelpText>
        <label>Total Draw Request</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Loan Tranche</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tranche</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Tranches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>